2010-05-14  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/connect.c: Fix capitalization again.

2010-05-13  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/connect.c: Add ordering to connect dialog.
	* server/pregame.c: Fix compiler warning.
	* common/gtk/player-icon.c, common/game.c, common/game.h,
	server/player.c, server/server.h, client/gtk/name.c,
	client/gtk/offline.c, client/common/player.c: Add function
	determine_player_type and variable default_player_style.
	* client/gtk/offline.c: Show better message when not connected.
	* client/common/client.c: Don't show 'Waiting for your turn' for
	viewers. Added full stop for several instructions.
	* editor/gtk/game-resources.c, editor/gtk/editor.c,
	editor/gtk/game-buildings.c, common/gtk/game-rules.c,
	common/gtk/game-settings.c, common/cards.c, server/gtk/main.c,
	client/gtk/interface.c, client/gtk/name.c, client/gtk/gold.c,
	client/gtk/player.c, client/gtk/quote.c, client/gtk/develop.c,
	client/gtk/legend.c, client/gtk/trade.c, client/gtk/gameover.c,
	client/gtk/discard.c, client/gtk/settingscreen.c, client/gtk/offline.c,
	client/gtk/gui.c, client/gtk/connect.c: Adjust capitalization.
	* common/gtk/common_gtk.c: Add caption to dialog.

2010-04-27  Roland Clobus <rclobus@rclobus.nl>
	* server/player.c: Don't show 'This game starts soon' for the last
	player to enter the game.
	* server/pregame.c: When all players are present, stop the tournament
	timer.
	* server/pregame.c: Reset the statistics for viewers.
	* client/common/player.c: Added a missing full stop.

2010-04-07  Roland Clobus <rclobus@rclobus.nl>
	* client/ai/greedy.c: Play soldier before starting the turn when own
	resource is blocked.

2010-03-27  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/monopoly.c, client/common/player.c: Use en_US spelling

2010-03-11  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/data/themes/FreeCIV-like/theme.cfg,
	client/gtk/data/themes/Wesnoth-like/theme.cfg: Fix the themes to avoid